--- a/src/back-end/LogLayer/Databases/LogDB/Mongo/K8s/k8s.log-db.statefulset.yaml
+++ b/src/back-end/LogLayer/Databases/LogDB/Mongo/K8s/k8s.log-db.statefulset.yaml
@@ -1,18 +1,22 @@
 apiVersion: apps/v1
 kind: StatefulSet
+
 metadata:
   name: log-db-state
   namespace: uniwa-stls
+
 spec:
   serviceName: log-db
   replicas: 1
   selector:
     matchLabels:
       app: log-db
+
   template:
     metadata:
       labels:
         app: log-db
+
     spec:
       containers:
         - name: log-db-container
@@ -26,6 +30,7 @@ spec:
           volumeMounts:
             - name: log-db-data
               mountPath: /data/db
+
           resources:
             requests:
               cpu: 100m
@@ -33,13 +38,31 @@ spec:
             limits:
               cpu: 500m
               memory: 512Mi
+
+          livenessProbe:
+            exec:
+              command:
+                - mongo
+                - --eval
+                - "db.adminCommand('ping')"
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 5
+          readinessProbe:
+            exec:
+              command:
+                - mongo
+                - --eval
+                - "db.adminCommand('ping')"
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+
       restartPolicy: Always
-  volumeClaimTemplates:
-    - metadata:
-        name: log-db-data
-      spec:
-        accessModes: [ "ReadWriteOnce" ]
-        resources:
-          requests:
-            storage: 1Gi
-        storageClassName: standard
+
+      volumes:
+        - name: log-db-data
+          persistentVolumeClaim:
+            claimName: log-db-pvc
