--- a/src/back-end/TrafficLayer/Databases/TrafficLightCacheDB/Redis/K8s/k8s.traffic-light-cache-db.statefulset.yaml
+++ b/src/back-end/TrafficLayer/Databases/TrafficLightCacheDB/Redis/K8s/k8s.traffic-light-cache-db.statefulset.yaml
@@ -44,12 +44,7 @@ spec:
               cpu: 200m
               memory: 256Mi
       restartPolicy: Always
-  volumeClaimTemplates:
-    - metadata:
-        name: traffic-light-cache-db-data
-      spec:
-        accessModes: [ "ReadWriteOnce" ]
-        resources:
-          requests:
-            storage: 512Mi
-        storageClassName: standard
+      volumes:
+        - name: traffic-light-cache-db-data
+          persistentVolumeClaim:
+            claimName: traffic-light-cache-db-pvc
