axios clients, pinia stores done

--- a/src/front-end/stls-ui/src/.env.development
+++ b/src/front-end/stls-ui/src/.env.development
@@ -1,10 +1,42 @@
 VITE_USER_API=http://localhost:5055
 VITE_NOTIFICATION_API=http://localhost:5087
 VITE_LOG_API=http://localhost:5005
-VITE_ANALYTICS_API=http://localhost:5208
-VITE_COORDINATOR_API=http://localhost:5020
+VITE_TRAFIC_ANALYTICS_=http://localhost:5208
+VITE_TRAFFIC_LIGHT_COORDINATOR=http://localhost:5020
 
-# Traffic Light Controllers
-# Example: Agiou Spyridonos -> 5261, Anatoliki Pyli -> 5262, etc.
-VITE_TRAFFIC_LIGHT_CONTROLLER_BASE=http://localhost
-VITE_TRAFFIC_LIGHT_CONTROLLER_PORT_START=5261
+# Agiou Spyridonos
+VITE_DETECTION_API_AGIOU-SPYRIDONOS=http://localhost:5122
+VITE_SENSOR_API_AGIOU-SPYRIDONOS=http://localhost:5070
+VITE_INTERSECTION_CONTROLLER_AGIOU-SPYRIDONOS=http://localhost:5190
+VITE_TRAFFIC_LIGHT_CONTROLLER_AGIOU-SPYRIDONOS101=http://localhost:5261
+VITE_TRAFFIC_LIGHT_CONTROLLER_DIMITSANAS102=http://localhost:5262
+
+# Anatoliki Pyli
+VITE_DETECTION_API_ANATOLIKI-PYLI=http://localhost:5123
+VITE_SENSOR_API_ANATOLIKI-PYLI=http://localhost:5071
+VITE_INTERSECTION_CONTROLLER_ANATOLIKI-PYLI=http://localhost:5191
+VITE_TRAFFIC_LIGHT_CONTROLLER_AGIOU-SPYRIDONOS201=http://localhost:5264
+VITE_TRAFFIC_LIGHT_CONTROLLER_ANATOLIKI-PYLI202=http://localhost:5263
+
+# Dytiki Pyli
+VITE_DETECTION_API_DYTIKI-PYLI=http://localhost:5124
+VITE_SENSOR_API_DYTIKI-PYLI=http://localhost:5072
+VITE_INTERSECTION_CONTROLLER_DYTIKI-PYLI=http://localhost:5192
+VITE_TRAFFIC_LIGHT_CONTROLLER_DYTIKI-PYLI301=http://localhost:5267
+VITE_TRAFFIC_LIGHT_CONTROLLER_DIMITSANAS-NORTH302=http://localhost:5265
+VITE_TRAFFIC_LIGHT_CONTROLLER_DIMITSANAS-SOUTH303=http://localhost:5266
+
+# Ekklisia
+VITE_DETECTION_API_EKKLISIA=http://localhost:5125
+VITE_SENSOR_API_EKKLISIA=http://localhost:5073
+VITE_INTERSECTION_CONTROLLER_EKKLISIA=http://localhost:5193
+VITE_TRAFFIC_LIGHT_CONTROLLER_DIMITSANAS401=http://localhost:5268
+VITE_TRAFFIC_LIGHT_CONTROLLER_EDESSIS402=http://localhost:5269
+VITE_TRAFFIC_LIGHT_CONTROLLER_KORYTSAS403=http://localhost:5270
+
+# Kentriki Pyli
+VITE_DETECTION_API_KENTRIKI-PYLI=http://localhost:5126
+VITE_SENSOR_API_KENTRIKI-PYLI=http://localhost:5074
+VITE_INTERSECTION_CONTROLLER_KENTRIKI-PYLI=http://localhost:5194
+VITE_TRAFFIC_LIGHT_CONTROLLER_KENTRIKI-PYLI501=http://localhost:5272
+VITE_TRAFFIC_LIGHT_CONTROLLER_AGIOU-SPYRIDONOS502=http://localhost:5271
