--- a/src/back-end/LogLayer/Databases/LogDB/Mongo/K8s/k8s.log-db.statefulset.yaml
+++ b/src/back-end/LogLayer/Databases/LogDB/Mongo/K8s/k8s.log-db.statefulset.yaml
@@ -1,22 +1,18 @@
 apiVersion: apps/v1
 kind: StatefulSet
-
 metadata:
   name: log-db-state
   namespace: uniwa-stls
-
 spec:
   serviceName: log-db
   replicas: 1
   selector:
     matchLabels:
       app: log-db
-
   template:
     metadata:
       labels:
         app: log-db
-
     spec:
       containers:
         - name: log-db-container
@@ -30,38 +26,30 @@ spec:
           volumeMounts:
             - name: log-db-data
               mountPath: /data/db
-
+          
           resources:
             requests:
-              cpu: 100m
+              cpu: 200m   # instead of 100-150m
               memory: 256Mi
             limits:
-              cpu: 500m
-              memory: 512Mi
-
+              cpu: 500m  # instead of 300-400m
+              memory: 1Gi
+          
           livenessProbe:
-            exec:
-              command:
-                - mongo
-                - --eval
-                - "db.adminCommand('ping')"
+            tcpSocket:
+              port: 27017
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 5
           readinessProbe:
-            exec:
-              command:
-                - mongo
-                - --eval
-                - "db.adminCommand('ping')"
+            tcpSocket:
+              port: 27017
             initialDelaySeconds: 5
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
-
       restartPolicy: Always
-
       volumes:
         - name: log-db-data
           persistentVolumeClaim:
