--- a/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.statefulset.yaml
+++ b/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.statefulset.yaml
@@ -1,22 +1,18 @@
 apiVersion: apps/v1
 kind: StatefulSet
-
 metadata:
   name: rabbitmq-state
   namespace: uniwa-stls
-
 spec:
   serviceName: rabbitmq
   replicas: 1
   selector:
     matchLabels:
       app: rabbitmq
-
   template:
     metadata:
       labels:
         app: rabbitmq
-
     spec:
       containers:
         - name: rabbitmq-container
@@ -32,31 +28,28 @@ spec:
           volumeMounts:
             - name: rabbitmq-data
               mountPath: /var/lib/rabbitmq
-
           resources:
             requests:
-              cpu: 100m
-              memory: 256Mi
-            limits:
-              cpu: 500m
+              cpu: 256m
               memory: 512Mi
+            limits:
+              cpu: 512m
+              memory: 1Gi
 
           livenessProbe:
-            exec:
-              command: ["rabbitmqctl", "status"]
-            initialDelaySeconds: 15
-            periodSeconds: 20
+            tcpSocket:
+              port: 5672
+            initialDelaySeconds: 20
+            periodSeconds: 15
             timeoutSeconds: 5
             failureThreshold: 5
           readinessProbe:
-            exec:
-              command: ["rabbitmqctl", "status"]
+            tcpSocket:
+              port: 5672
             initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 5
-
       restartPolicy: Always
-
       volumes:
         - name: rabbitmq-data
           persistentVolumeClaim:
