--- a/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/K8s/k8s.detection-cache-db.statefulset.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/K8s/k8s.detection-cache-db.statefulset.yaml
@@ -24,25 +24,27 @@ spec:
           volumeMounts:
             - name: detection-cache-db-data
               mountPath: /data
+          
+          resources:
+            requests:
+              cpu: 100m   # instead of 100-150m
+              memory: 128Mi
+            limits:
+              cpu: 200m  # instead of 300-400m
+              memory: 512Mi
+
           livenessProbe:
-            exec:
-              command: ["redis-cli", "ping"]
-            initialDelaySeconds: 15
-            periodSeconds: 10
+            tcpSocket:
+              port: 6379
+            initialDelaySeconds: 20
+            periodSeconds: 15
             timeoutSeconds: 5
             failureThreshold: 5
           readinessProbe:
-            exec:
-              command: ["redis-cli", "ping"]
+            tcpSocket:
+              port: 6379
             initialDelaySeconds: 10
             periodSeconds: 10
-          resources:
-            requests:
-              cpu: 50m
-              memory: 128Mi
-            limits:
-              cpu: 200m
-              memory: 256Mi
       restartPolicy: Always
       volumes:
         - name: detection-cache-db-data
