--- a/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detection-db.statefulset.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detection-db.statefulset.yaml
@@ -26,25 +26,27 @@ spec:
           volumeMounts:
             - name: detection-db-data
               mountPath: /data/db
+          
+          resources:
+            requests:
+              cpu: 200m   # instead of 100-150m
+              memory: 256Mi
+            limits:
+              cpu: 500m  # instead of 300-400m
+              memory: 1Gi
+
           livenessProbe:
-            exec:
-              command: ["mongo", "--eval", "db.adminCommand('ping')"]
-            initialDelaySeconds: 15
-            periodSeconds: 20
+            tcpSocket:
+              port: 27017
+            initialDelaySeconds: 20
+            periodSeconds: 15
             timeoutSeconds: 5
             failureThreshold: 5
           readinessProbe:
-            exec:
-              command: ["mongo", "--eval", "db.adminCommand('ping')"]
+            tcpSocket:
+              port: 27017
             initialDelaySeconds: 10
             periodSeconds: 10
-          resources:
-            requests:
-              cpu: 100m
-              memory: 128Mi
-            limits:
-              cpu: 300m
-              memory: 256Mi
       restartPolicy: Always
       volumes:
         - name: detection-db-data
