--- a/src/back-end/TrafficLayer/Databases/TrafficAnalyticsDB/PostgreSQL/K8s/k8s.traffic-analytics-db.statefulset.yaml
+++ b/src/back-end/TrafficLayer/Databases/TrafficAnalyticsDB/PostgreSQL/K8s/k8s.traffic-analytics-db.statefulset.yaml
@@ -26,35 +26,27 @@ spec:
           volumeMounts:
             - name: traffic-analytics-db-data
               mountPath: /var/lib/postgresql/data
+
+          resources:
+            requests:
+              cpu: 200m   # instead of 100-150m
+              memory: 256Mi
+            limits:
+              cpu: 500m  # instead of 300-400m
+              memory: 1Gi
+
           livenessProbe:
-            exec:
-              command:
-                - "pg_isready"
-                - "-U"
-                - "postgres"
-                - "-d"
-                - "TrafficAnalyticsDB"
-            initialDelaySeconds: 15
-            periodSeconds: 20
+            tcpSocket:
+              port: 5432
+            initialDelaySeconds: 20
+            periodSeconds: 15
             timeoutSeconds: 5
             failureThreshold: 5
           readinessProbe:
-            exec:
-              command:
-                - "pg_isready"
-                - "-U"
-                - "postgres"
-                - "-d"
-                - "TrafficAnalyticsDB"
+            tcpSocket:
+              port: 5432
             initialDelaySeconds: 10
             periodSeconds: 10
-          resources:
-            requests:
-              cpu: 100m
-              memory: 256Mi
-            limits:
-              cpu: 500m
-              memory: 512Mi
       restartPolicy: Always
       volumes:
         - name: traffic-analytics-db-data
