--- a/src/back-end/TrafficLayer/Databases/TrafficLightDB/MSSQL/K8s/k8s.traffic-light-db.statefulset.yaml
+++ b/src/back-end/TrafficLayer/Databases/TrafficLightDB/MSSQL/K8s/k8s.traffic-light-db.statefulset.yaml
@@ -33,36 +33,28 @@ spec:
           volumeMounts:
             - name: traffic-light-db-data
               mountPath: /var/opt/mssql
+          resources:
+            requests:
+              cpu: 500m
+              memory: 512Mi
+            limits:
+              cpu: 1000m
+              memory: 2Gi
+
           livenessProbe:
-            exec:
-              command:
-                - /opt/mssql-tools/bin/sqlcmd
-                - "-S"
-                - "localhost"
-                - "-U"
-                - "sa"
-                - "-P"
-                - "$(MSSQL_SA_PASSWORD)"
-                - "-Q"
-                - "SELECT 1"
+            tcpSocket:
+              port: 1433
             initialDelaySeconds: 30
             periodSeconds: 20
             timeoutSeconds: 5
             failureThreshold: 5
+
           readinessProbe:
-            exec:
-              command:
-                - /opt/mssql-tools/bin/sqlcmd
-                - "-S"
-                - "localhost"
-                - "-U"
-                - "sa"
-                - "-P"
-                - "$(MSSQL_SA_PASSWORD)"
-                - "-Q"
-                - "SELECT 1"
+            tcpSocket:
+              port: 1433
             initialDelaySeconds: 15
             periodSeconds: 10
+
       restartPolicy: Always
       volumes:
         - name: traffic-light-db-data
