--- a/src/back-end/TrafficLayer/Services/IntersectionControllerService/K8s/Deployment/k8s.intersection-controller.agiou-spyridonos.yaml
+++ b/src/back-end/TrafficLayer/Services/IntersectionControllerService/K8s/Deployment/k8s.intersection-controller.agiou-spyridonos.yaml
@@ -15,6 +15,31 @@ spec:
       labels:
         app: intersection-controller-agiou-spyridonos
     spec:
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for RabbitMQ..." &&
+              until nc -z rabbitmq-svc 5672; do
+                echo "RabbitMQ not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "RabbitMQ is up!"
+        - name: wait-for-traffic-cache
+          image: redis:7
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for Traffic Light Cache (Redis)..." &&
+              until redis-cli -h traffic-light-cache-db -a "$REDIS_PASSWORD" ping | grep -q PONG; do
+                echo "Redis not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "Redis is up!"
       containers:
         - name: intersection-controller-agiou-spyridonos-container
           image: ath21/stls-services:intersection-controller
@@ -22,21 +47,17 @@ spec:
           ports:
             - containerPort: 8080
 
-          # --- Load from ConfigMap and Secret ---
           envFrom:
             - configMapRef:
                 name: intersection-controller-config
             - secretRef:
                 name: intersection-controller-secret
-          
+
           env:
-            # --- Intersection Details ---
             - name: "Intersection__Id"
               value: "1"
             - name: "Intersection__Name"
               value: "Agiou Spyridonos"
-
-            # --- Traffic Lights ---
             - name: "TrafficLights__0__Id"
               value: "101"
             - name: "TrafficLights__0__Name"
@@ -46,7 +67,6 @@ spec:
             - name: "TrafficLights__1__Name"
               value: "Dimitsanas"
 
-          # --- Probes ---
           livenessProbe:
             httpGet:
               path: /health
@@ -65,27 +85,13 @@ spec:
             timeoutSeconds: 5
             failureThreshold: 3
 
-          # --- Resource Limits ---
           resources:
             requests:
-              cpu: 150m
-              memory: 256Mi
+              cpu: 50m   # instead of 100-150m
+              memory: 64Mi
             limits:
-              cpu: 400m
-              memory: 512Mi
+              cpu: 200m  # instead of 300-400m
+              memory: 128Mi
+
 
       restartPolicy: Always
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: intersection-controller-agiou-spyridonos-svc
-  namespace: uniwa-stls
-spec:
-  type: ClusterIP
-  ports:
-    - port: 8080
-      targetPort: 8080
-  selector:
-    app: intersection-controller-agiou-spyridonos
