--- a/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.deployment.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.deployment.yaml
@@ -15,6 +15,21 @@ spec:
       labels:
         app: traffic-analytics
     spec:
+      # === INIT CONTAINERS ===
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: busybox
+          command: ['sh', '-c', 'until nc -z rabbitmq 5672; do echo "Waiting for RabbitMQ..."; sleep 2; done;']
+
+        - name: wait-for-detectiondb
+          image: busybox
+          command: ['sh', '-c', 'until nc -z detection-db 27017; do echo "Waiting for Detection DB (Mongo)..."; sleep 2; done;']
+
+        - name: wait-for-traffic-analytics-db
+          image: busybox
+          command: ['sh', '-c', 'until nc -z traffic-analytics-db 5432; do echo "Waiting for Traffic Analytics DB (Postgres)..."; sleep 2; done;']
+
+      # === MAIN CONTAINER ===
       containers:
         - name: traffic-analytics-container
           image: ath21/stls-services:traffic-analytics
@@ -22,7 +37,7 @@ spec:
           ports:
             - containerPort: 8080
           
-          # Load configuration from ConfigMap + Secret
+          # --- Load configuration ---
           envFrom:
             - configMapRef:
                 name: traffic-analytics-config
@@ -48,13 +63,13 @@ spec:
             timeoutSeconds: 3
             failureThreshold: 3
 
-          # --- Resource Limits ---
+          # --- Resources ---
           resources:
             requests:
-              cpu: 100m
-              memory: 128Mi
+              cpu: 50m   # instead of 100-150m
+              memory: 64Mi
             limits:
-              cpu: 300m
-              memory: 256Mi
+              cpu: 200m  # instead of 300-400m
+              memory: 128Mi
 
       restartPolicy: Always
