--- a/src/back-end/TrafficLayer/Services/TrafficLightControllerService/K8s/Deployment/Ekklisia/k8s.traffic-light-controller.edessis402.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightControllerService/K8s/Deployment/Ekklisia/k8s.traffic-light-controller.edessis402.yaml
@@ -15,6 +15,31 @@ spec:
       labels:
         app: traffic-light-controller-edessis402
     spec:
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for RabbitMQ..." &&
+              until nc -z rabbitmq-svc 5672; do
+                echo "RabbitMQ not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "RabbitMQ is up!"
+        - name: wait-for-traffic-cache
+          image: redis:7
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for Traffic Light Cache (Redis)..." &&
+              until redis-cli -h traffic-light-cache-db -a "$REDIS_PASSWORD" ping | grep -q PONG; do
+                echo "Redis not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "Redis is up!"
       containers:
         - name: traffic-light-controller-edessis402-container
           image: ath21/stls-services:traffic-light-controller
@@ -64,11 +89,12 @@ spec:
           # --- Resource Limits ---
           resources:
             requests:
-              cpu: 150m
-              memory: 256Mi
+              cpu: 50m   # instead of 100-150m
+              memory: 64Mi
             limits:
-              cpu: 400m
-              memory: 512Mi
+              cpu: 200m  # instead of 300-400m
+              memory: 128Mi
+
 
       restartPolicy: Always
 
