--- a/src/back-end/TrafficLayer/Services/TrafficLightCoordinatorService/K8s/k8s.traffic-light-coordinator.deployment.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightCoordinatorService/K8s/k8s.traffic-light-coordinator.deployment.yaml
@@ -15,6 +15,55 @@ spec:
       labels:
         app: traffic-light-coordinator
     spec:
+      # 🟡 --- Init Containers: Wait for RabbitMQ, Redis, and SQL Server ---
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for RabbitMQ..." &&
+              until nc -z rabbitmq-svc 5672; do
+                echo "RabbitMQ not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "RabbitMQ is up!"
+
+        - name: wait-for-redis
+          image: redis:7
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for Traffic Light Cache (Redis)..." &&
+              until redis-cli -h traffic-light-cache-db -a "$REDIS_PASSWORD" ping | grep -q PONG; do
+                echo "Redis not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "Redis is up!"
+
+        - name: wait-for-sqlserver
+          image: mcr.microsoft.com/mssql-tools:latest
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for Traffic Light DB (MSSQL)..." &&
+              until /opt/mssql-tools/bin/sqlcmd -S traffic-light-db,1433 \
+                -U sa -P "$MSSQL_SA_PASSWORD" -Q "SELECT 1" > /dev/null 2>&1; do
+                echo "SQL Server not ready, sleeping...";
+                sleep 5;
+              done;
+              echo "SQL Server is up!"
+          env:
+            - name: MSSQL_SA_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: traffic-light-db-secret
+                  key: MSSQL_SA_PASSWORD
+
+      # 🟢 --- Main Application Container ---
       containers:
         - name: traffic-light-coordinator-container
           image: ath21/stls-services:traffic-light-coordinator
@@ -51,10 +100,11 @@ spec:
           # --- Resource Limits ---
           resources:
             requests:
-              cpu: 100m
-              memory: 128Mi
+              cpu: 50m   # instead of 100-150m
+              memory: 64Mi
             limits:
-              cpu: 300m
-              memory: 256Mi
+              cpu: 200m  # instead of 300-400m
+              memory: 128Mi
+
 
       restartPolicy: Always
