--- a/src/back-end/UserLayer/Services/NotificationService/K8s/k8s.notification-api.deployment.yaml
+++ b/src/back-end/UserLayer/Services/NotificationService/K8s/k8s.notification-api.deployment.yaml
@@ -15,6 +15,35 @@ spec:
       labels:
         app: notification-api
     spec:
+      # 🟡 --- Init Containers ---
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for RabbitMQ..." &&
+              until nc -z rabbitmq-svc 5672; do
+                echo "RabbitMQ not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "RabbitMQ is up!"
+
+        - name: wait-for-mongodb
+          image: mongo:7
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for Notification MongoDB..." &&
+              until mongo --host notification-db --eval "db.adminCommand('ping')" > /dev/null 2>&1; do
+                echo "MongoDB not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "MongoDB is up!"
+
+      # 🟢 --- Main Container ---
       containers:
         - name: notification-api-container
           image: ath21/stls-services:notification-api
@@ -51,10 +80,11 @@ spec:
           # --- Resource Limits ---
           resources:
             requests:
-              cpu: 100m
-              memory: 128Mi
+              cpu: 50m   # instead of 100-150m
+              memory: 64Mi
             limits:
-              cpu: 300m
-              memory: 256Mi
+              cpu: 200m  # instead of 300-400m
+              memory: 128Mi
+
 
       restartPolicy: Always
