--- a/src/back-end/UserLayer/Services/UserService/K8s/k8s.user-api.deployment.yaml
+++ b/src/back-end/UserLayer/Services/UserService/K8s/k8s.user-api.deployment.yaml
@@ -15,6 +15,42 @@ spec:
       labels:
         app: user-api
     spec:
+      # 🟡 --- Init Containers ---
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for RabbitMQ..." &&
+              until nc -z rabbitmq-svc 5672; do
+                echo "RabbitMQ not ready, sleeping...";
+                sleep 3;
+              done;
+              echo "RabbitMQ is up!"
+
+        - name: wait-for-userdb
+          image: mcr.microsoft.com/mssql-tools
+          command:
+            - sh
+            - -c
+            - >
+              echo "Waiting for User MSSQL DB..." &&
+              until /opt/mssql-tools/bin/sqlcmd -S user-db,1433 -U sa -P "$MSSQL_SA_PASSWORD" -Q "SELECT 1" > /dev/null 2>&1;
+              do
+                echo "User DB not ready, sleeping...";
+                sleep 5;
+              done;
+              echo "User DB is up!"
+          env:
+            - name: MSSQL_SA_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: user-db-secret
+                  key: MSSQL_SA_PASSWORD
+
+      # 🟢 --- Main Container ---
       containers:
         - name: user-api-container
           image: ath21/stls-services:user-api
@@ -51,10 +87,10 @@ spec:
           # --- Resource Limits ---
           resources:
             requests:
-              cpu: 100m
-              memory: 128Mi
+              cpu: 50m   # instead of 100-150m
+              memory: 64Mi
             limits:
-              cpu: 300m
-              memory: 256Mi
+              cpu: 200m  # instead of 300-400m
+              memory: 128Mi
 
       restartPolicy: Always
