--- a/src/back-end/LogLayer/Services/LogService/K8s/k8s.log-api.config.yaml
+++ b/src/back-end/LogLayer/Services/LogService/K8s/k8s.log-api.config.yaml
@@ -29,7 +29,7 @@ data:
 
   # Message Broker
   ## Configuration
-  RabbitMQ__Host: rabbitmq
+  RabbitMQ__Host: rabbitmq-svc
   RabbitMQ__VirtualHost: /
   RabbitMQ__Port: "5672"
 
