--- a/src/back-end/UserLayer/Services/NotificationService/K8s/k8s.notification-api.secret.yaml
+++ b/src/back-end/UserLayer/Services/NotificationService/K8s/k8s.notification-api.secret.yaml
@@ -7,6 +7,6 @@ stringData:
   Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
   Email__Username: ice19390005@gmail.com
   Email__Password: waqr ilfj fxpu banq
-  Mongo__ConnectionString: "mongodb://mongo:mongo123@notification-db:27017"
+  Mongo__ConnectionString: "mongodb://mongo:mongo123@notification-db-svc:27017"
   RabbitMQ__Username: rabbitmq
   RabbitMQ__Password: rabbitmq123
