--- a/src/back-end/UserLayer/Services/UserService/K8s/k8s.user-api.secret.yaml
+++ b/src/back-end/UserLayer/Services/UserService/K8s/k8s.user-api.secret.yaml
@@ -5,6 +5,6 @@ metadata:
 type: Opaque
 stringData:
   Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
-  MSSQL__ConnectionString: Server=user-db,1433;Database=UserDB;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
+  MSSQL__ConnectionString: Server=user-db-svc,1433;Database=UserDB;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
   RabbitMQ__Username: rabbitmq
   RabbitMQ__Password: rabbitmq123
