--- a/src/back-end/LogLayer/Services/LogService/K8s/k8s.log-api.secret.yaml
+++ b/src/back-end/LogLayer/Services/LogService/K8s/k8s.log-api.secret.yaml
@@ -6,6 +6,6 @@ metadata:
 type: Opaque
 stringData:  
   Jwt__Key: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
-  Mongo__ConnectionString: "mongodb://mongo:mongo123@log-db:27017/"
+  Mongo__ConnectionString: "mongodb://mongo:mongo123@log-db-svc:27017/"
   RabbitMQ__Username: "rabbitmq"
   RabbitMQ__Password: "rabbitmq123"
