--- a/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.secret.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.secret.yaml
@@ -5,7 +5,7 @@ metadata:
 type: Opaque
 stringData:
   Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
-  Mongo__ConnectionString: mongodb://mongo:mongo123@detection-db:27017
-  PostgreSQL__ConnectionString: Host=traffic-analytics-db;Port=5432;Database=TrafficAnalyticsDB;Username=postgres;Password=postgres123
+  Mongo__ConnectionString: mongodb://mongo:mongo123@detection-db-svc:27017
+  PostgreSQL__ConnectionString: Host=traffic-analytics-db-svc;Port=5432;Database=TrafficAnalyticsDB;Username=postgres;Password=postgres123
   RabbitMQ__Username: rabbitmq
   RabbitMQ__Password: rabbitmq123
