--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detection-api.secret.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detection-api.secret.yaml
@@ -6,7 +6,7 @@ metadata:
 type: Opaque
 stringData:
   Jwt__Key: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
-  Mongo__ConnectionString: "mongodb://mongo:mongo123@detection-db:27017/"
+  Mongo__ConnectionString: "mongodb://mongo:mongo123@detection-db-svc:27017/"
   RabbitMQ__Username: "rabbitmq"
   RabbitMQ__Password: "rabbitmq123"
 
